cmake_minimum_required(VERSION 3.16)

get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "_" ProjectId ${ProjectId})
project(${ProjectId})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_DISABLE_PRECOMPILE_HEADERS ON)

if (MSVC)
    add_compile_options(/W4 /WX)
else()
    add_compile_options(-Wall -Wextra -pedantic -Werror)
endif()


add_subdirectory(cafe)
add_subdirectory(cheapest-way)
add_subdirectory(knight-move)
add_subdirectory(median-out-of-three)
add_subdirectory(print-the-route-of-the-maximum-cost)
add_subdirectory(nop-with-response-recovery)
add_subdirectory(search-in-depth)
add_subdirectory(connectivity-components)
add_subdirectory(cheating)
add_subdirectory(topological-sorting)
add_subdirectory(cycle-search)
add_subdirectory(shortest-path-length)
add_subdirectory(the-path-in-the-graph)
add_subdirectory(fleas)
add_subdirectory(speleologist-way)
add_subdirectory(metro-2)
add_subdirectory(card-counter)
add_subdirectory(status-200)
add_subdirectory(matrix-resurrection)
add_subdirectory(rome)
add_subdirectory(good-string)
add_subdirectory(tree-path)
add_subdirectory(sizif)
add_subdirectory(max-xor)
add_subdirectory(queens)
add_subdirectory(historical-array)
add_subdirectory(one-line)
add_subdirectory(monopoly)
add_subdirectory(segments)
add_subdirectory(regex)
add_subdirectory(game-divider)
add_subdirectory(ipv4-ipv6)


set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ipv4-ipv6)
